Fix hero on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -125,10 +125,11 @@ h3 {
 }
 
 hr {
-  @apply border-stone-700 my-4;
+  @apply border-stone-800 my-4;
 }
 
-p {
+p,
+span {
   @apply text-gray-400 text-base font-light;
 }
 
